add: Premise REST Controller