@@ -7,54 +7,23 @@ import pl.com.mike.developer.domain.developer.Developer;
 import pl.com.mike.developer.domain.developer.DeveloperData;
 import pl.com.mike.developer.logic.developer.DeveloperSearchFilter;
 import pl.com.mike.developer.logic.developer.DeveloperService;
-import pl.com.mike.developer.logic.developer.PremiseSearchFilter;
-import pl.com.mike.developer.logic.developer.PremiseService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @RestController
-@RequestMapping("api/")
+@RequestMapping("api/developers/")
 public class DeveloperEndpoint {
 
-    private final PremiseService premiseService;
     private final DeveloperService developerService;
     private final ApplicationConfig applicationConfig;
 
-    public DeveloperEndpoint(PremiseService premiseService,
-                             DeveloperService developerService,
+    public DeveloperEndpoint(DeveloperService developerService,
                              ApplicationConfig applicationConfig) {
-        this.premiseService = premiseService;
         this.developerService = developerService;
         this.applicationConfig = applicationConfig;
     }
 
-    @GetMapping("premises/investment/{id}/enhancedPremiseData")
-    public PremiseAggregatedValuesGetResponse getMinAndMaxTotalPremisePriceByInvestmentId(@PathVariable Long id) {
-        return premiseService.findPremisePriceRangeByInvestmentId(id);
-    }
-
-    @GetMapping("premises/investment/{id}")
-    public PremisesGetResponse getPremisesByInvestmentId(
-            @PathVariable Long id,
-            @RequestParam(name = "languageCode", required = false) String languageCode) {
-        return new PremisesGetResponse(
-                ConverterToResponse.premisesDataToResponse(
-                        premiseService.getPremiseDataByInvestmentId(new PremiseSearchFilter(id, languageCode))
-                ));
-    }
-
-    @GetMapping("premises/{id}")
-    public PremisesGetResponse getPremiseById(
-            @PathVariable Long id,
-            @RequestParam(name = "languageCode", required = false) String languageCode) {
-        return new PremisesGetResponse(
-                ConverterToResponse.premisesDataToResponse(
-                        premiseService.getPremiseDataById(new PremiseSearchFilter(id, languageCode))
-                ));
-    }
-
-    @GetMapping("developers/{id}")
+    @GetMapping("{id}")
     public DevelopersGetResponse getDeveloperById(@PathVariable Long id) {
         return new DevelopersGetResponse(
                 ConverterToResponse.developersDataToResponse(
@@ -62,7 +31,7 @@ public class DeveloperEndpoint {
                 ));
     }
 
-    @GetMapping("developers/code")
+    @GetMapping("code")
     public DevelopersGetResponse getDeveloperByCode() {
         return new DevelopersGetResponse(
                 ConverterToResponse.developerDataToResponse(
@@ -72,7 +41,7 @@ public class DeveloperEndpoint {
                 ));
     }
 
-    @GetMapping("developers")
+    @GetMapping
     public DevelopersGetResponse getAllActiveDevelopers() {
         List<Developer> allActiveDevelopers = developerService.getAllActiveDevelopers();
         return new DevelopersGetResponse(
@@ -96,23 +65,23 @@ public class DeveloperEndpoint {
                                 developer.getUpdatedAt(),
                                 developer.getDeletedAt()
                         ))
-                        .collect(Collectors.toList())
+                        .toList()
         );
     }
 
-    @PostMapping("developers/register")
+    @PostMapping("register")
     public ResponseEntity<?> registerDeveloper(@RequestBody DeveloperData developerData) {
         DeveloperData developer = developerService.createDeveloper(developerData);
         return ResponseEntity.ok(developer);
     }
 
-    @PutMapping("developers/{id}")
+    @PutMapping("{id}")
     public ResponseEntity<?> updateDeveloper(@PathVariable Long id, @RequestBody DeveloperData developerData) {
         DeveloperData developer = developerService.updateDeveloper(id, developerData);
         return ResponseEntity.ok(developer);
     }
 
-    @DeleteMapping("developers/{id}")
+    @DeleteMapping("{id}")
     public ResponseEntity<Void> softDeleteDeveloper(@PathVariable Long id) {
         developerService.softDeleteDeveloper(id);
         return ResponseEntity.noContent().build();
